test/files/pos/java-import-static-from-subclass/Test.java
package p1;

public class Test extends Base {}
class Base {
  static class I {}
}
