test/files/neg/java-import-non-existing-selector/BadClient.java
package p1;

import static p1.Test.DoesNotExist;

class BadClient {

}
